feature credit migration creditos y projection
V 4.05.25 Se realzia migracion de valores adicionales de credito y se migra en proyecciones las lista principal com la lista de cada uno

--- a/app/src/main/res/layout/fragment_list_projection.xml
+++ b/app/src/main/res/layout/fragment_list_projection.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,69 +10,10 @@
     android:layout_margin="@dimen/space_min"
     tools:context=".finanzas.controller.projections.ListProjectFragment">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/space_min"
-            android:orientation="vertical">
-            <ProgressBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/pb_load_lpj"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/num_items">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/tv_num_items_lpj"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/months_number_hint"
-                        android:enabled="false"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:textAlignment="center"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
+      <androidx.compose.ui.platform.ComposeView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:id="@+id/composeview_flp"
+          />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    style="@style/MaterialTextInputLayoutView"
-                    app:prefixText="$"
-                    android:hint="@string/num_tot_save">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/tv_tot_saved_lpj"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/money_hint"
-                        android:enabled="false"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:textAlignment="center"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-            </LinearLayout>
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_list_lpj"
-                android:layout_width="match_parent"
-                android:padding="@dimen/space_min"
-                android:layout_height="wrap_content"/>
-
-            </ScrollView>
-        </LinearLayout>
-
-
-</com.google.android.material.card.MaterialCardView>
+</LinearLayout>
