--- a/app/src/main/res/layout/fragment_projections.xml
+++ b/app/src/main/res/layout/fragment_projections.xml
@@ -8,254 +8,9 @@
     android:elevation="@dimen/card_elevator"
     tools:context=".finanzas.controller.projections.ProjectionsFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/space_min">
-
-            <ProgressBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/pb_load_pjs"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/num_items">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_num_items_pjs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/num_credits_hint"
-                    android:textAlignment="center" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/MaterialTextInputLayoutView"
-                app:prefixText="$"
-                android:hint="@string/num_tot_save">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_tot_save_pjs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/money_hint"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:textAlignment="center" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            </LinearLayout>
-
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="@dimen/radius_corner"
-                app:strokeWidth="@dimen/stroke_with"
-                android:layout_margin="@dimen/space_min"
-                android:elevation="@dimen/card_elevator">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/space_min"
-                    android:orientation="vertical">
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="@dimen/space_min"
-                        android:layout_margin="@dimen/space_min"
-                        android:text="@string/closed"/>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:hint="@string/date">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/tv_dt_close_pjs"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/date_hint"
-                            enabled="false"
-                            style="@style/MaterialTextInputLayoutView"
-                            android:enabled="false"
-                            android:textAlignment="center" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:hint="@string/months_lack">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/tv_month_close_pjs"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/num_credits_hint"
-                            android:enabled="false"
-                            style="@style/MaterialTextInputLayoutView"
-                            android:textAlignment="center" />
-                    </com.google.android.material.textfield.TextInputLayout>
-                    </LinearLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        style="@style/MaterialTextInputLayoutView"
-                        app:prefixText="$"
-                        android:hint="@string/num_saved">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/tv_save_close_pjs"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/money_hint"
-                            style="@style/MaterialTextInputLayoutView"
-                            android:enabled="false"
-                            android:textAlignment="center" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/space_min"
-                >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/space_min"
-                android:orientation="vertical">
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/space_min"
-                    android:layout_margin="@dimen/space_min"
-                    android:text="@string/fared"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/space_min"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/date">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/tv_dt_far_pjs"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/date_hint"
-                        android:enabled="false"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:textAlignment="center" />
-                </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_margin="@dimen/space_min"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/months_lack">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_month_far_pjs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/num_credits_hint"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:enabled="false"
-                    android:textAlignment="center" />
-            </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/space_min"
-                style="@style/MaterialTextInputLayoutView"
-                app:prefixText="$"
-                android:hint="@string/num_saved">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_save_far_pjs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/money_hint"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:textAlignment="center" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_detail_pjs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/space_min"
-                    android:layout_weight="1"
-                    android:text="@string/detail"
-                    app:icon="@android:drawable/ic_menu_view" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_add_pjs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/space_min"
-                    android:layout_weight="1"
-                    android:text="@string/add"
-                    app:icon="@android:drawable/ic_menu_add" />
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+  <androidx.compose.ui.platform.ComposeView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/componentview_pjt"/>
 
 </LinearLayout>
