--- a/app/src/main/res/layout/fragment_additional_credit.xml
+++ b/app/src/main/res/layout/fragment_additional_credit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,100 +7,9 @@
     tools:context=".finanzas.controller.creditfix.AdditionalCreditFragment"
     android:layout_margin="@dimen/space_min"
     android:orientation="vertical">
-    <ScrollView
+    <androidx.compose.ui.platform.ComposeView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            app:cardElevation="@dimen/card_elevator"
-            app:cardCornerRadius="@dimen/radius_corner"
-            app:strokeWidth="@dimen/stroke_with"
-            android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/space_min"
-        android:orientation="vertical">
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_margin="@dimen/space_min"
-        android:hint="@string/name"
-        app:endIconMode="clear_text"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:id="@+id/nameAC"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_margin="@dimen/space_min"
-            android:hint="@string/value"
-            app:endIconMode="clear_text"
-            app:prefixText="$"
-            android:layout_height="wrap_content">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:id="@+id/valueAC"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            style="@style/MaterialTextInputLayoutView"
-            android:layout_margin="@dimen/space_min"
-            android:hint="@string/start_date"
-            app:endIconMode="clear_text"
-            android:layout_height="wrap_content">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                style="@style/MaterialTextInputLayoutView"
-                android:id="@+id/start_date_ac"
-                android:focusable="false"
-                android:layout_height="wrap_content"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            style="@style/MaterialTextInputLayoutView"
-            android:layout_margin="@dimen/space_min"
-            android:hint="@string/end_date"
-            app:endIconMode="clear_text"
-            android:layout_height="wrap_content">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                style="@style/MaterialTextInputLayoutView"
-                android:id="@+id/end_date_ac"
-                android:focusable="false"
-                android:layout_height="wrap_content"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_cancel_ac"
-                app:icon="@android:drawable/ic_delete"
-                android:layout_margin="@dimen/space_min"
-                android:text="@string/cancel"
-                android:layout_weight="1"/>
-
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/save"
-                android:id="@+id/btn_save_ac"
-                android:layout_margin="@dimen/space_min"
-                app:icon="@android:drawable/ic_menu_save"
-                android:layout_weight="1"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-        </androidx.cardview.widget.CardView>
-</ScrollView>
-</com.google.android.material.card.MaterialCardView>
+        android:layout_height="match_parent"
+        android:id="@+id/compose_view_facf"
+        />
+</LinearLayout>
