--- a/app/src/main/res/layout/fragment_additional_list.xml
+++ b/app/src/main/res/layout/fragment_additional_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,77 +8,10 @@
     tools:context=".finanzas.controller.creditfix.AdditionalListFragment">
 
 
-    <ScrollView
+    <androidx.compose.ui.platform.ComposeView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/compose_view_fal"
+        />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/space_min"
-            android:orientation="vertical" >
-
-            <ProgressBar
-                android:id="@+id/pb_load_adl"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:elevation="@dimen/card_elevator_5"
-                android:progressBackgroundTint="?attr/colorPrimaryVariant"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/green_light_trans"
-                android:hint="@string/num_additionals"
-                android:layout_weight="1"
-                style="@style/MaterialTextInputLayoutView">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:enabled="false"
-                    android:id="@+id/tv_num_additionals_al"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/months_number_hint"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/tot_additionals"
-                app:prefixText="$">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/money_hint"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:id="@+id/tv_tot_additional_al"
-                    android:textAlignment="center"/>
-            </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_list_al"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/space_min"
-                android:layout_margin="@dimen/space_min"/>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_add_al"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/space_min"
-                android:text="@string/add"/>
-        </LinearLayout>
-    </ScrollView>
-
-</com.google.android.material.card.MaterialCardView>
+</LinearLayout>
