--- a/app/src/main/res/layout/quote_credit_variable.xml
+++ b/app/src/main/res/layout/quote_credit_variable.xml
@@ -7,227 +7,10 @@
     android:layout_gravity="center_vertical"
     android:padding="@dimen/padding_page"
     android:orientation="vertical">
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="@dimen/radius_corner"
-        app:strokeWidth="@dimen/stroke_with"
-        app:cardElevation="@dimen/card_elevator">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/padding_page"
-            android:orientation="vertical">
+<androidx.compose.ui.platform.ComposeView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/compose_view_sqcv"/>
 
-            <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:hint="@string/credit_value"
-            app:prefixText="$"
-            app:endIconMode="clear_text">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etNameItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:ems="10"
-
-            android:inputType="numberSigned" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:hint="@string/tax"
-            android:layout_weight="1"
-            app:suffixText="%"
-            app:endIconMode="clear_text">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etTax"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-
-            android:inputType="numberDecimal"
-            android:textAlignment="textEnd" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/space_min"
-                    android:layout_weight="2"
-                    android:hint="@string/kind_of_tax"
-                    app:endIconMode="clear_text">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_kind_of_tax_qcv"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:focusable="false"
-                        android:textAlignment="textEnd" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min"
-            android:hint="@string/months"
-            app:endIconMode="clear_text">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etMonths"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="number|textPersonName" />
-        </com.google.android.material.textfield.TextInputLayout>>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnClear"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="@dimen/space_min"
-                android:layout_marginEnd="@dimen/space_min"
-                app:icon="@drawable/ic_baseline_cleaning_services_24"
-                android:text="@string/clear" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnCalc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:icon="?android:attr/actionModeWebSearchDrawable"
-            android:text="@string/calc" />
-        </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/llCalculationQCCV">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            android:hint="@string/months">
-
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:id="@+id/months"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/autocomplete_padding_left"
-            android:textAlignment="center"/>
-
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/MaterialTextInputLayoutView"
-            app:prefixText="$"
-            android:hint="@string/capital_value" >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvCapitalValue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/money_hint"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:textAlignment="center"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textView9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:prefixText="$"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/interest_value">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvInterestValueList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/money_hint"
-            style="@style/MaterialTextInputLayoutView"
-            android:enabled="false"
-            android:textAlignment="center"/>
-
-        </com.google.android.material.textfield.TextInputLayout>>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textView12"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:prefixText="$"
-            style="@style/MaterialTextInputLayoutView"
-            android:hint="@string/total_value">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tvTotalValue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/money_hint"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:textAlignment="center" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="294dp">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnAmortizationQCV"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginEnd="@dimen/space_min"
-            app:icon="?android:attr/actionModeWebSearchDrawable"
-            android:text="@string/amortization"/>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSaveVariable"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:icon="@android:drawable/ic_menu_save"
-            android:text="@string/save" />
-
-
-    </LinearLayout>
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
