--- a/app/src/main/res/layout/fragment_amortization_table.xml
+++ b/app/src/main/res/layout/fragment_amortization_table.xml
@@ -1,167 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".finanzas.controller.AmortizationTableFragment">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/space_min"
-        android:orientation="vertical">
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/pb_load_at"/>
+   <androidx.compose.ui.platform.ComposeView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:id="@+id/composeView_fat"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/credit_value"
-                style="@style/MaterialTextInputLayoutView"
-                android:layout_weight="1"
-                app:prefixText="$">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/credit_value_at"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/money_hint"
-                    android:textAlignment="textEnd"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/quoteValueLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:prefixText="$"
-                android:layout_weight="1"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/quote_value">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/quote_value_at"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/money_hint"
-                    android:textAlignment="textEnd"/>
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_see_more_at"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_page"
-            android:text="@string/see_more"/>
-
-        <Button
-            android:id="@+id/btn_extra_values_list_at"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_page"
-            android:text="@string/extra_value_list"/>
-    </LinearLayout>
-
-    <TableLayout
-        android:id="@+id/tableAT"
-        android:layout_width="match_parent"
-        android:layout_margin="@dimen/space_min"
-        android:padding="@dimen/space_min"
-        android:layout_height="wrap_content">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            >
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:textColor="@color/white"
-                android:layout_margin="@dimen/column_space_min"
-                android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"
-                android:padding="@dimen/space_min"
-                android:text="#" />
-
-            <com.google.android.material.textview.MaterialTextView
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/space_min"
-                android:text="@string/value"
-                android:background="?attr/colorPrimary"
-                android:layout_margin="@dimen/column_space_min"
-                android:layout_weight="2.5"
-                android:textAlignment="center"
-                android:textColor="@color/white" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/capital_column_at"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/space_min"
-                android:layout_margin="@dimen/column_space_min"
-                android:background="?attr/colorPrimary"
-                android:textColor="@color/white"
-                android:layout_weight="3"
-                android:textAlignment="center"
-                android:text="@string/capital_value" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
-                android:background="?attr/colorPrimary"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_margin="@dimen/column_space_min"
-                android:layout_weight="3"
-                android:textAlignment="center"
-                android:padding="@dimen/space_min"
-                android:text="@string/interest_value" />
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:id="@+id/totalColumn"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="?attr/colorPrimary"
-                            android:layout_margin="@dimen/column_space_min"
-                            android:textColor="@color/white"
-                            android:textAlignment="center"
-                            android:padding="@dimen/space_min"
-                            android:layout_weight="2"
-                            android:text="total"/>
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/NextValueColumn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"
-                android:layout_margin="@dimen/column_space_min"
-                android:padding="@dimen/space_min"
-                android:layout_weight="2"
-                android:text="next value"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:visibility="visible" />
-        </TableRow>
-    </TableLayout>
-
-    </LinearLayout>
-    </ScrollView>
-</FrameLayout>
+</LinearLayout>
